운영서버 최신화 (#258)
* [SOU-593] 기념품 조회 응답에 찜 수/여부 추가 (#250)

* feat: 찜 수 집계 쿼리 추가

* feat: 찜 수 및 찜 ID 목록 조회 쿼리 추가

* feat: 기념품 상세 조회에 찜 수/여부 추가

* feat: 근처 기념품 목록 조회에 찜 수/여부 추가

* feat: 내 기념품 목록 조회에 찜 수/여부 추가

* feat: 일반 추천 기념품 조회에 찜 수/여부 추가

* feat: AI 추천 기념품 조회에 찜 수/여부 추가

* test: 찜 수/여부 추가에 따른 테스트 수정

* [SOU-571] 찜 기능 테스트 코드 및 API 문서 작성 (#251)

* feat: 찜 기능 테스트 코드 및 API 문서 작성

* feat: 찜 목록 조회 응답에 isWishlisted 필드 추가

* [SOU-601] 탈퇴 유저 삭제 배치 스케줄러 구현 (#252)

* feat: 탈퇴 유저 삭제 배치 스케줄러 추가

* feat: 탈퇴 유저 삭제 로직 반환값 추가 및 테스트 수정

* chore: 불필요한 import 구문 제거

* fix: userId UUID 타입 불일치로 인한 NumberFormatException 수정 (#253)

* feat: 탈퇴 유저 배치 삭제로 정책 변경 및 테스트 수정 (#254)

* feat: 정보 동의한 회원들에게만 알림을 발송하도록 수정 (#255)

* refactor: auth 바운디드 컨텍스트 수정

* fix: 깃 충돌 수정

* refactor: 정책에 따라 테스트 코드 수정

* [SOU-622] Docker DB 전환 및 자동 백업 파이프라인 구축

---------

Co-authored-by: johoon030 <142702766+hoonjo123@users.noreply.github.com>
Co-authored-by: Develop-KIM <kimdonghwan913@gmail.com>
Co-authored-by: monkey <105265603+Develop-KIM@users.noreply.github.com>